[gd_scene load_steps=26 format=3 uid="uid://dpl0mcphj5tk0"]

[ext_resource type="Script" path="res://Scenes/Player/Player2/player.gd" id="1_x30hu"]
[ext_resource type="Shader" path="res://Scenes/Player/Player2/player_hit.gdshader" id="2_oabup"]
[ext_resource type="Texture2D" uid="uid://j72r5deby7vj" path="res://Graphics/Spritesheets/Penguin/Idle.png" id="2_podss"]
[ext_resource type="Texture2D" uid="uid://43lfb3lyefnb" path="res://Graphics/Spritesheets/Penguin/Walk.png" id="3_hr4b8"]
[ext_resource type="Script" path="res://Scenes/Player/Player2/IdleState.gd" id="4_dj1hw"]
[ext_resource type="Script" path="res://Scenes/Player/Player2/PlayerFiniteStateMachine.gd" id="4_nlayn"]
[ext_resource type="Texture2D" uid="uid://bs4gv7q1ultpg" path="res://Graphics/Spritesheets/Penguin/Death.png" id="5_os24a"]
[ext_resource type="Script" path="res://Scenes/Player/Player2/WalkState.gd" id="6_x2cs5"]
[ext_resource type="Script" path="res://Scenes/Player/Player2/AttakState.gd" id="7_becx5"]
[ext_resource type="PackedScene" uid="uid://diy85w135sgrw" path="res://Scenes/Beam/beam.tscn" id="8_qngc4"]
[ext_resource type="Script" path="res://Scripts/Attackable.gd" id="9_ettdl"]
[ext_resource type="Script" path="res://Scripts/CharacterHitbox.gd" id="10_20m7g"]
[ext_resource type="Script" path="res://Scenes/Player/Player2/DeathState.gd" id="10_ei2o2"]
[ext_resource type="Script" path="res://Scenes/Player/Player2/Orbs.gd" id="11_nrq0c"]
[ext_resource type="AudioStream" uid="uid://cribpqi2ab5in" path="res://Sounds/step_1.mp3" id="13_0h3u2"]
[ext_resource type="Script" path="res://Scenes/Player/Player2/player_debuf.gd" id="15_hvgfd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hprcg"]
radius = 8.0
height = 16.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3hneh"]
shader = ExtResource("2_oabup")
shader_parameter/hit_opacity = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7feck"]
size = Vector2(15, 3)

[sub_resource type="Animation" id="Animation_4jrmu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_podss")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:material:shader_parameter/hit_opacity")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_4pkjs"]
resource_name = "death"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_os24a")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_i7da8"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_i6h01"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_podss")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_ahfdo"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_hr4b8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_crfqv"]
_data = {
"RESET": SubResource("Animation_4jrmu"),
"death": SubResource("Animation_4pkjs"),
"hit": SubResource("Animation_i7da8"),
"idle": SubResource("Animation_i6h01"),
"walk": SubResource("Animation_ahfdo")
}

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("progress_bar", "fsm")]
z_index = 1
y_sort_enabled = true
position = Vector2(0, -5)
collision_layer = 2
collision_mask = 130
script = ExtResource("1_x30hu")
progress_bar = NodePath("ProgressBar")
fsm = NodePath("FSM")

[node name="Hitbox" type="Area2D" parent="." node_paths=PackedStringArray("character") groups=["player_hitbox"]]
collision_mask = 32
script = ExtResource("10_20m7g")
character = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_hprcg")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_3hneh")
position = Vector2(1, 7)
texture = ExtResource("2_podss")
hframes = 2

[node name="WalkHitBox" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 5.5)
shape = SubResource("RectangleShape2D_7feck")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_crfqv")
}

[node name="Projectiles" type="Node2D" parent="."]

[node name="Beam" parent="Projectiles" instance=ExtResource("8_qngc4")]
z_index = 2
position = Vector2(1, -3)

[node name="Attackable" type="Node" parent="Projectiles/Beam"]
script = ExtResource("9_ettdl")

[node name="Orbs" type="Node2D" parent="Projectiles"]
position = Vector2(0, -2)
script = ExtResource("11_nrq0c")
count = 8

[node name="FSM" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_nlayn")
initial_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="FSM" node_paths=PackedStringArray("animationPlayer", "sprite", "walk_state")]
script = ExtResource("4_dj1hw")
animationPlayer = NodePath("../../AnimationPlayer")
sprite = NodePath("../../Sprite2D")
walk_state = NodePath("../WalkState")

[node name="WalkState" type="Node" parent="FSM" node_paths=PackedStringArray("animationPlayer", "sprite", "idle_state", "player")]
script = ExtResource("6_x2cs5")
animationPlayer = NodePath("../../AnimationPlayer")
sprite = NodePath("../../Sprite2D")
idle_state = NodePath("../IdleState")
player = NodePath("../..")
speed = 200.0

[node name="SoundWalk" type="AudioStreamPlayer" parent="FSM/WalkState"]
stream = ExtResource("13_0h3u2")
volume_db = 4.587
pitch_scale = 1.22

[node name="Timer" type="Timer" parent="FSM/WalkState"]
wait_time = 0.21

[node name="AttackState" type="Node" parent="FSM" node_paths=PackedStringArray("laserBeam", "attackable", "animationPlayer", "sprite", "player")]
script = ExtResource("7_becx5")
laserBeam = NodePath("../../Projectiles/Beam")
attackable = NodePath("../../Projectiles/Beam/Attackable")
animationPlayer = NodePath("../../AnimationPlayer")
sprite = NodePath("../../Sprite2D")
player = NodePath("../..")

[node name="DeathState" type="Node" parent="FSM" node_paths=PackedStringArray("animationPlayer", "sprite", "player")]
script = ExtResource("10_ei2o2")
animationPlayer = NodePath("../../AnimationPlayer")
sprite = NodePath("../../Sprite2D")
player = NodePath("../..")

[node name="ProgressBar" type="ProgressBar" parent="."]
z_index = 2
offset_left = -14.0
offset_top = -19.0
offset_right = 16.0
offset_bottom = -13.0
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
texture_filter = 1
offset_left = 22.0
offset_top = -68.0
offset_right = 190.0
offset_bottom = -40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 7
text = "sadsadsdsadsdas"
script = ExtResource("15_hvgfd")
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="FSM/WalkState/Timer" to="FSM/WalkState" method="_on_timer_timeout"]
[connection signal="is_dead" from="FSM/DeathState" to="." method="_on_death_state_is_dead"]
